@@ -6,6 +6,7 @@ munin (work)
   * Main: Added limit message option "strtrunc".
   * Main: "contacts" can now be set to "none".
   * Main: Bugfix with graphs using both "graph_sums" and data aliases.
+  * Main: Tables in service-view now sorted according to graph_order.
   * Plugins: generic/sendmail_mail{stats,traffic} updated.
   * Plugins: Made generic/samba more portable (fixes by Nicolas Stransky).
   * Plugins: Fixed typo in generic/loggrep breaking implicit labeling.
